--- a/Puredo.xcodeproj/PuredoWidgetPuredoWidget.entitlements
+++ b/Puredo.xcodeproj/PuredoWidgetPuredoWidget.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.kangchainx.Puredo</string>
+		<string>group.com.yourcompany.puredo</string>
 	</array>
 </dict>
 </plist>
